# rss-feed-flask-htmx-tailwind-alpinejs

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/flask_htmx_tailwind/: __init__.py
src/flask_htmx_tailwind/templates/: base.html  feed.html  icons.jinja2
src/flask_htmx_tailwind/templates/partials/: add_feed.html  entry.html  entry_page.html
src/static/css/: tailwind.css
