[project]
name = "flask-htmx-tailwind"
version = "0.1.0"
description = ""
authors = [
    {name = "RehanY147",email = "rehanyousaf147@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[dotenv] (>=3.1.1,<4.0.0)",
    "jinja-partials (>=0.3.0,<0.4.0)",
    "feedparser (>=6.0.11,<7.0.0)"
]

[tool.poetry]
packages = [{include = "flask_htmx_tailwind", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
